[project]
name = "snrg_cartons"
authors = [
    { name = "SNRG Electricals", email = "admin@snrgelectricals.com"}
]
description = "Carton Management System"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.app-dependencies]
frappe = ">=15.0.0"
